# MathSol

./: .gitignore  CMakeLists.txt  README.md
examples/: expressions.msol  script.msol  token_parts.msol
release/v0.0.3/: README.md
release/v0.0.4/: README.md
src/: global.hpp  main.cpp
src/lexer/: CMakeLists.txt
src/lexer/include/: lexer.hpp  token.hpp
src/lexer/src/: lexer.cpp  token.cpp
src/parser/: CMakeLists.txt
src/parser/include/: ast_printer.hpp  ast_visitor.hpp  expression.hpp  literal.hpp  literal.ipp  parser.hpp  statement.hpp
src/parser/src/: ast_printer.cpp  expression.cpp  literal.cpp  parser.cpp  statement.cpp
